# data_raul105

grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/: .gitignore  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  UPGRADE.md  grasp-manager.sh  grasp-manager.yml.dist
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/cmake/: CodeCoverage.cmake  FindCSV.cmake  FindCUNIT.cmake  FindGribApi.cmake  FindMUMPS.cmake
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/overview/: Makefile  catalog.xml  customlayer-chunk.xsl  customlayer-fo.xsl  customlayer-grasp-open.xsl  customlayer-html.xsl  grasp_settings_parameters_doc_generator.sh
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/overview/figures/: GRASP_runtime_architecture_2013-10-13.dia  GRASP_runtime_architecture_2013-10-13.xcf  GRASP_runtime_architecture_2015-03-13.dia  GRASP_story.dia
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/overview/src/: biblio.dbk  chap01.dbk  chap02.dbk  chap03.dbk  chap04.dbk  common_entities.dtd  examples.dbk  glossary.dbk  glossary_example.dbk  main.dbk  preface.dbk  settings_parameters.dbk  settings_parameters_template.dbk  special_issue9.bib  special_issue9.bib.xml
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/technical/: Doxyfile_template  DoxygenLayout.xml  Makefile  catalog.xml  cleanup.sh  customlayer-common.xsl  prepare-doxygen.sh
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/technical/custom-elements/: footer.html  footer.php  header.html  header.php  jquery.js  stylesheet.html.css  stylesheet.php.css  tabs.html.css  tabs.php.css
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/doc/technical/markdown/: chap00.md  chap01.md  chap02.md  chap03.md
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/examples/: README.md
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/examples/lidar_and_sunphotometer/: example_lidar_sunphotometer.sdat  example_lidar_sunphotometer_inversion_output.txt  settings_example_lidar_sunphotometer_inversion.yml
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/examples/polder/: example_polder_inversion_output.txt  example_polder_inversion_output_LB.txt  settings_example_polder_inversion.yml  settings_example_polder_inversion_LB.yml
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/examples/sunphotometer/: example_sunphotometer_inversion_output.txt  settings_example_sunphotometer_inversion.yml
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/home/: README.md
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/: CMakeLists.txt
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/grasputils/: AUTHORS  CMakeLists.txt  ChangeLog
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/grasputils/grasp/: Makefile.am  Makefile.in  allocator.c  array_utils.c  benchmark.c  cmdline_utils.c  error.c  file_utils.c  fortran_utils.c  logging.c  string_utils.c  time_utils.c  trackmem.c  utils.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/grasputils/grasp_f90/: ChangeLog  get_sizeof_time_t.c  mod_c_utils.f90  mod_time_utils.f90
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/src/: CMakeLists.txt
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/libs/yamlsettings/: CMakeLists.txt  README.md  yamlsettings.c  yamlsettings.h  yamlsettings_assign_data.c  yamlsettings_assign_data.h  yamlsettings_data_types.c  yamlsettings_data_types.h  yamlsettings_defaults.c  yamlsettings_defaults.h  yamlsettings_dictionary.c  yamlsettings_dictionary.h  yamlsettings_error.c  yamlsettings_error.h  yamlsettings_input_yaml.c  yamlsettings_input_yaml.h  yamlsettings_parse_settings_file_mode.h  yamlsettings_process_yaml.c  yamlsettings_process_yaml.h  yamlsettings_validators.c  yamlsettings_validators.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/: CMakeLists.txt
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/controller/: CMakeLists.txt  grasp.in  grasp_controller.c  grasp_controller.h  grasp_controller_functions.h  grasp_controller_settings.h  grasp_main.c  grasp_main.h  grasp_mpi_engine.c  grasp_mpi_engine.h  mo_grasp_controller.f90  mo_grasp_controller.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/global/: CMakeLists.txt  grasp_compilation_information.c  grasp_compilation_information.h  grasp_input_transformers.sh  grasp_output_current_functions.sh  grasp_parameters.c  grasp_parameters.h  grasp_retrieval_characteristic_type.h  grasp_retrieval_meas_type.h  grasp_runtime_information.c  grasp_runtime_information.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/input/: CMakeLists.txt  Makefile  grasp_input.c  grasp_input.h  grasp_input_functions.h  grasp_input_functions_settings_template.h  grasp_input_load_functions.h  grasp_input_load_functions_template.c  grasp_input_segment.c  grasp_input_segment.h  grasp_input_settings.h  grasp_input_tile_description.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/output/: CMakeLists.txt  grasp_output.c  grasp_output.h  grasp_output_functions.h  grasp_output_functions_settings_template.h  grasp_output_load_function.h  grasp_output_load_function_template.c  grasp_output_segment_result.c  grasp_output_segment_result.h  grasp_output_settings.h  grasp_output_stream.c  grasp_output_stream.h  grasp_output_stream_t.h  grasp_output_tile_result.c  grasp_output_tile_result.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/retrieval/: CMakeLists.txt
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/settings/: CMakeLists.txt  grasp_products.h  grasp_settings.c  grasp_settings.h  grasp_settings_assign_data.c  grasp_settings_assign_data.h  grasp_settings_data_types.c  grasp_settings_data_types.h  grasp_settings_t.h  grasp_settings_validators.c  grasp_settings_validators.h
grasp-master-a0163170d25b375d74798ad4f9661d2b975b0372/src/test/: CMakeLists.txt  grasp-coverage.sh  grasp_test_aod.c  grasp_test_examples.sh  grasp_test_output.c  grasp_test_sdata.c
(+181 files in other folders)
