# Copyright 2016 CNRS & Universite Lille 1. All rights reserved.
# Licensed under the GRASP Open Source License V1.0 (see LICENSE file)

include_directories(${INPUT_BIN} ${INPUT_SRC} ${OUTPUT_BIN} ${RETRIEVAL_BIN} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(segment_functions)
add_subdirectory(tile_functions)
add_subdirectory(current_functions)

set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_INCLUDES "")
set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_STRUCT "")
set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_INCLUDE "")
set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT "")
set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_PARAMETERS "")
set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_NAMES "")
get_property(OUTPUT_SEGMENT_FUNCTIONS GLOBAL PROPERTY OUTPUT_SEGMENT_FUNCTIONS)
list(LENGTH OUTPUT_SEGMENT_FUNCTIONS GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_SIZE)
set(index 0)
set(nsettings 0)
foreach(s ${OUTPUT_SEGMENT_FUNCTIONS})
	list(APPEND SEGMENT_FUNCTIONS_LIBS output_segment_function_${s})
	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/segment_functions/${s}/grasp_output_segment_${s}_settings.h")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_INCLUDES "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_INCLUDES}\n#include \"segment_functions/${s}/grasp_output_segment_${s}_settings.h\"")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_STRUCT}\n\tgrasp_output_segment_function_settings_${s}_t ${s};")
                math(EXPR nsettings "${nsettings}+1")
        endif()
	set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_INCLUDE "${GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_INCLUDE}\n#include \"segment_functions/${s}/grasp_output_segment_${s}.h\"")
        set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT "${GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT}\n\t}else if(strcmp(name,\"${s}\")==0){ return grasp_output_segment_function_${s}();")
	set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_PARAMETERS "${GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_PARAMETERS}\n\tresult[${index}]=grasp_output_segment_function_settings_${s}(settings);")
        set(GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_NAMES "${GRASP_OUTPUT_LOAD_FUNCTION_SEGMENT_NAMES}            case ${index}: return \"${s}\";\n")
	math(EXPR index "${index}+1")
endforeach()
if(nsettings EQUAL 0)
    set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_SEGMENT_STRUCT}\n\t\tvoid *noelements;")
endif()

set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_INCLUDES "")
set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_STRUCT "")
set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_INCLUDE "")
set(GRASP_OUTPUT_LOAD_FUNCTION_TILE "")
set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_PARAMETERS "")
set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_NAMES "")
get_property(OUTPUT_TILE_FUNCTIONS GLOBAL PROPERTY OUTPUT_TILE_FUNCTIONS)
list(LENGTH OUTPUT_TILE_FUNCTIONS GRASP_OUTPUT_LOAD_FUNCTION_TILE_SIZE)
set(index 0)
set(nsettings 0)
foreach(t ${OUTPUT_TILE_FUNCTIONS})
	list(APPEND TILE_FUNCTIONS_LIBS output_tile_function_${t})
	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/tile_functions/${t}/grasp_output_tile_${t}_settings.h")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_INCLUDES "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_INCLUDES}\n#include \"tile_functions/${t}/grasp_output_tile_${t}_settings.h\"")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_STRUCT}\n\tgrasp_output_tile_function_settings_${t}_t ${t};")
                math(EXPR nsettings "${nsettings}+1")
        endif()
	set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_INCLUDE "${GRASP_OUTPUT_LOAD_FUNCTION_TILE_INCLUDE}\n#include \"tile_functions/${t}/grasp_output_tile_${t}.h\"")
        set(GRASP_OUTPUT_LOAD_FUNCTION_TILE "${GRASP_OUTPUT_LOAD_FUNCTION_TILE}\n\t}else if(strcmp(name,\"${t}\")==0){ return grasp_output_tile_function_${t}();")
	set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_PARAMETERS "${GRASP_OUTPUT_LOAD_FUNCTION_TILE_PARAMETERS}\n\tresult[${index}]=grasp_output_tile_function_settings_${t}(settings);")
        set(GRASP_OUTPUT_LOAD_FUNCTION_TILE_NAMES "${GRASP_OUTPUT_LOAD_FUNCTION_TILE_NAMES}            case ${index}: return \"${t}\";\n")
	math(EXPR index "${index}+1")
endforeach()
if(nsettings EQUAL 0)
    set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_TILE_STRUCT}\n\t\tvoid *noelements;")
endif()

set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_INCLUDES "")
set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_STRUCT "")
set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_INCLUDE "")
set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT "")
set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_PARAMETERS "")
set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_NAMES "")
get_property(OUTPUT_CURRENT_FUNCTIONS GLOBAL PROPERTY OUTPUT_CURRENT_FUNCTIONS)
list(LENGTH OUTPUT_CURRENT_FUNCTIONS GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_SIZE)
set(index 0)
set(nsettings 0)
foreach(t ${OUTPUT_CURRENT_FUNCTIONS})
	list(APPEND CURRENT_FUNCTIONS_LIBS output_current_function_${t})
	if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/current_functions/${t}/grasp_output_current_${t}_settings.h")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_INCLUDES "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_INCLUDES}\n#include \"current_functions/${t}/grasp_output_current_${t}_settings.h\"")
		set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_STRUCT}\n\tgrasp_output_current_function_settings_${t}_t ${t};")
                math(EXPR nsettings "${nsettings}+1")
        endif()
	set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_INCLUDE "${GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_INCLUDE}\n#include \"current_functions/${t}/grasp_output_current_${t}.h\"")
        set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT "${GRASP_OUTPUT_LOAD_FUNCTION_CURRENT}\n\t}else if(strcmp(name,\"${t}\")==0){ return grasp_output_current_function_${t}();")
	set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_PARAMETERS "${GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_PARAMETERS}\n\tresult[${index}]=grasp_output_current_function_settings_${t}(settings);")
        set(GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_NAMES "${GRASP_OUTPUT_LOAD_FUNCTION_CURRENT_NAMES}            case ${index}: return \"${t}\";\n")
	math(EXPR index "${index}+1")
endforeach()
if(nsettings EQUAL 0)
    set(GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_STRUCT "${GRASP_OUTPUT_FUNCTIONS_SETTINGS_CURRENT_STRUCT}\n\t\tvoid *noelements;")
endif()


configure_file(grasp_output_load_function_template.c
	${CMAKE_CURRENT_BINARY_DIR}/grasp_output_load_function.c)
configure_file(grasp_output_functions_settings_template.h
	${CMAKE_CURRENT_BINARY_DIR}/grasp_output_functions_settings.h)

add_library(grasp_output
	grasp_output_stream.c
	grasp_output.c
        grasp_output_segment_result.c
        grasp_output_tile_result.c
	${CMAKE_CURRENT_BINARY_DIR}/grasp_output_load_function.c
)
target_link_libraries(grasp_output ${SEGMENT_FUNCTIONS_LIBS} ${TILE_FUNCTIONS_LIBS} ${CURRENT_FUNCTIONS_LIBS})
